Resolve root certificates
Signed-off-by: Muntashir Al-Islam <muntashirakon@riseup.net>